# notice-scraper

./: KSTARTUP.py  README.md  SBA.py  SMTECH.py  main.py  pyproject.toml  run.py
csv/K-Startup/: 2022-11-22.csv
csv/SBA/: 2022-11-22.csv
csv/SMTECH/: 2022-11-22.csv
functions/: KSTARTUP.py  SBA.py  SMTECH.py  getDate.py  save.py
