[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["jinwook <crispy.alc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.6.0"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
